--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -199,35 +199,31 @@
             {% csrf_token %}
 
             <div class="col container suggestion-section pt-3 pb-4 mb-4 mt-5" style="margin-left: -0.8rem;">
+                {% for suggestion in suggestions %}
                 <div class="card suggestion-card mx-1 my-1 pb-1 col-lg-4 d-flex" style="border-radius: 1rem;"
-                    onclick="submitSuggestion('standard conventions of English')">
+                    onclick="submitSuggestion('{{ suggestion.topic|escapejs }}')">
                     <div class="card-body">
-                        <p class="card-title text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#fadb6e" class="bi bi-book" viewBox="0 0 16 16">
-                            <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
-                          </svg> standard conventions of English</p>
+                        <p class="card-title" style="color: rgb(212, 212, 212);">
+                            {# Fixed icons based on position #}
+                            {% if forloop.counter0 == 0 %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#13e18f" class="bi bi-book" viewBox="0 0 16 16">
+                                <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+                            </svg>
+                            {% elif forloop.counter0 == 1 %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#fadb6e" class="bi bi-lightbulb" viewBox="0 0 16 16">
+                                <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1"/>
+                              </svg>
+                            {% else %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#9770fa" class="bi bi-stars" viewBox="0 0 16 16">
+                                <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z"/>
+                            </svg>
+                            {% endif %}
+                            {{ suggestion.topic }}
+                        </p>
                     </div>
                 </div>
-                <div class="card suggestion-card mx-1 my-1 pb-1 col-lg-4 d-flex" style="border-radius: 1rem;"
-                    onclick="submitSuggestion('effects of inflation in the economy')">
-                    <div class="card-body">
-                        <p class="card-title text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                                fill="#13e18f" class="bi bi-graph-up-arrow" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M0 0h1v15h15v1H0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5" />
-                            </svg> effects of inflation in the economy</p>
-                    </div>
-                </div>
-                <div class="card suggestion-card mx-1 my-1 pb-1 col-lg-4 d-flex" style="border-radius: 1rem;"
-                    onclick="submitSuggestion('celestial objects in the solar system')">
-                    <div class="card-body">
-                        <p class="card-title text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                                fill="#9770fa" class="bi bi-stars" viewBox="0 0 16 16">
-                                <path
-                                    d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.73 1.73 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.73 1.73 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.73 1.73 0 0 0 3.407 2.31zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.16 1.16 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.16 1.16 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732z" />
-                            </svg> celestial objects in the solar system</p>
-                    </div>
-                </div>
-            </div>
+                {% endfor %}
+            </div>            
 
 
             <div class="flex-wrapper" style="display: flex;">
@@ -393,7 +389,7 @@
             }
 
             const currentEnergy = "{{ user_energy|default:'0' }}";
-            if (parseInt(currentEnergy) < 10) {
+            if (parseInt(currentEnergy) < 20) {
                 e.preventDefault();
                 alert('Not enough energy! Energy resets daily.');
                 return;
@@ -403,7 +399,7 @@
             badge.classList.remove('d-none');
             
             // Update energy display immediately
-            const newEnergy = parseInt(currentEnergy) - 10;
+            const newEnergy = parseInt(currentEnergy) - 20;
             document.querySelector('.progress-bar').style.width = newEnergy + '%';
             document.querySelector('.text-light').textContent = newEnergy + '/100';
             
@@ -414,7 +410,7 @@
             badge.style.animation = 'none';
             setTimeout(() => {
                 badge.style.animation = 'fadeOutUp 1s ease forwards';
-            }, 10);
+            }, 20);
         });
 
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
